# self_update

./: Cargo.toml  main.rs  nohup.sh  output.txt  upd.sh
src/: command.txt  main  main.rs
