[package]
name = "new_main_test"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows-service = { git = "https://github.com/mullvad/windows-service-rs"}
daemonize = {git =  "https://github.com/knsd/daemonize/"}
reqwest = { version = "0.11", features = ["blocking","json"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }  # for our async runtime
surf ="2.3.2"
async-std = {version = "1", features = ["attributes", "tokio1"]}
femme = "1.3.0"
log ="0.4.17"
http-types = "2.12.0"
futures = "0.3"
curl = "0.4.44"
self_update = "0.32.0"

async_runtime = { version = "^0.1", package = "naja_async_runtime" }
updater-lp = "0.2"

tempfile = "3.3.0"
zip = "0.6.2"
zip-extract = "0.1.1"

