[package]
name = "testsurff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf ="2.3.2"
async-std ={version = "1.12.0",features = ["attributes"]}
serde_json = "1.0"
http-types = "2.12.0"
femme= "2.2.1"
log="0.4.17"
futures = "0.3.24"
tokio = "1.21.2"
websocket = "0.26.5"



async_runtime = { version = "^0.1", package = "naja_async_runtime" }
reqwest = { version = "0.11", features = ["blocking","json"] }
zip = "0.6.2"
